<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:textSize="50dp"
      android:text="@string/register"
    />

  <EditText
      android:id="@+id/et_username_rgs"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="80dp"
      android:hint="@string/username"
    />

  <EditText
      android:id="@+id/et_password_rgs"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="10dp"
      android:hint="@string/password"
      android:password="true"
      />

  <EditText
      android:id="@+id/et_confirm"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="10dp"
      android:hint="@string/confirm_pass"
      android:password="true"
      />

  <EditText
      android:id="@+id/et_phone"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="10dp"
      android:hint="@string/phone_numb"
      android:inputType="phone"
      />

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginLeft="60dp"
      android:layout_marginTop="10dp"
    >
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/gender"
      android:textColor="@color/black"
      android:layout_marginRight="10dp"
      android:textSize="15dp"
    />

  <RadioGroup
      android:id="@+id/rg_gender"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
    >
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male"
      />
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/female"
      />
  </RadioGroup>
  </LinearLayout>

  <Button
      android:id="@+id/btn_dob"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/dob"
      />

  <CheckBox
      android:id="@+id/cb_terms"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="10dp"
      android:text="@string/terms_cond"
    />

  <Button
      android:id="@+id/btn_register_rgs"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="10dp"
      android:text="@string/register"
    />

  <Button
      android:id="@+id/btn_login_rgs"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/login"
    />

</LinearLayout>