<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="50dp"
        android:text="@string/home"
        />

    <TextView
        android:id="@+id/tv_greeting"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Welcome!"
        android:textSize="20dp"
        />

    <TextView
        android:id="@+id/tv_wallet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="wallet"
        android:textSize="20dp"
        />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/transaction_history"
        android:textSize="20dp"
        />

    <TextView
        android:id="@+id/tv_no_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_transaction"
        android:textSize="20dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_transaction"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</LinearLayout>